# langchain

./: app.py  ice_breaker.py  pyproject.toml
core/agents/: linkedin_lookup.py
core/tools/: linkedin.py
